[package]
name = "ccase"
version = "0.5.0"
authors = ["Rutrum <dave@rutrum.net>"]
edition = "2021"
description = "Command line interface to convert strings into any case"
license = "MIT"
keywords = [ "casing", "case", "string" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"
repository = "https://github.com/rutrum/ccase"
documentation = "https://github.com/rutrum/ccase"

[[bin]]
name = "ccase"
path = "src/main.rs"

[dependencies]
convert_case = { version = "0.8", features = ["random"] }
clap = { version = "^4.5", features = ["cargo", "color", "wrap_help"] }
is-terminal = "^0.4"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
predicates = "^3.1"
assert_cmd = "2.0"
